<resources>
    <string name="app_name">GestionScore</string>

    <!-- Titre des différentes activités -->
    <string name="titre_ConnectionActivity">Ecran connexion</string>
    <string name="titre_homepageActivity">Ecran d\'accueil</string>
    <string name="titre_AjoutScoreActivity">Ajout score dans un jeu</string>
    <string name="titre_TopGameActivity">Top 10 d\'un jeu</string>
    <string name="titre_AfficherTop10Activity" translatable="false">Top 10</string>
    <string name="titre_ListGameActivity">Liste des jeux</string>
    <string name="titre_ListUserActivity">Liste des utilisateurs</string>
    <string name="titre_WizardActivity">Liste des jeux</string>

    <!-- Pour l'écran de connexion -->
    <string name="login">pseudo...</string>
    <string name="password">mot de passe...</string>
    <string name="logon">Connexion</string>
    <string name="register">S\'inscrire</string>
    <string name="newLogin">nouveau pseudo...</string>
    <string name="newPassword">nouveau mot de passe...</string>
    <string name="confirmPassword">confirmer mot de passe...</string>
    <string name="save">Sauvegarder</string>

    <!-- Pour l'écran d'accueil -->
    <string name="btn_ajoutScore">Ajout un score</string>
    <string name="btn_topGame">Afficher le top 10 d\'un jeu</string>
    <string name="btn_listGame">Afficher la liste des jeux</string>
    <string name="btn_listUser">Lister les utilisateurs</string>

    <!-- Ecran AjoutScore -->
    <string name="nameGame">Nom du jeu...</string>
    <string name="scoreObtenu">Score obtenu...</string>
    <string name="btn_wizard" translatable="false"> + </string>
    <string name="btn_ajouterScore">Ajouter le score</string>

    <!-- Ecran top 10 -->
    <string name="btn_top10">Afficher le top 10</string>

    <!-- Ecran listes jeux -->
    <string name="btn_previous">Précédent</string>
    <string name="btn_next">Suivant</string>
    <string name="btnTop10" translatable="false">Top 10</string>

    <!-- Ecran afficher top 10 -->
    <string name="tv_position" translatable="false">Pos.</string>
    <string name="tv_pseudo" translatable="false">Pseudo</string>
    <string name="tv_score" translatable="false">Score</string>
    <string name="tv_position1" translatable="false">1</string>
    <string name="tv_position2" translatable="false">2</string>
    <string name="tv_position3" translatable="false">3</string>
    <string name="tv_position4" translatable="false">4</string>
    <string name="tv_position5" translatable="false">5</string>
    <string name="tv_position6" translatable="false">6</string>
    <string name="tv_position7" translatable="false">7</string>
    <string name="tv_position8" translatable="false">8</string>
    <string name="tv_position9" translatable="false">9</string>
    <string name="tv_position10" translatable="false">10</string>

    <string name="error404">Impossible d\'accéder à la page web contenant le RPC</string>
    <!-- Code de retour pour le script "se_connecter.php" -->
    <string name="connect_code_0">Connexion</string>
    <string name="connect_code_100">Problème de pseudo (non transmis ou vide)</string>
    <string name="connect_code_110">Problème de mot de passe (non transmis ou vide)</string>
    <string name="connect_code_200">Combinaison pseudo/mot de passe incorrecte</string>
    <string name="connect_code_1000">Problème de connexion à la DB</string>
    <string name="connect_code_2000">Un autre problème est survenu</string>

    <!-- Code de retour pour le script "creer_compte.php" -->
    <string name="creer_compte_code_0">Sauvegarde dans la DB OK</string>
    <string name="creer_compte_code_100">Problème de pseudo (non transmis ou vide)</string>
    <string name="creer_compte_code_110">Problème de mot de passe (non transmis ou vide)</string>
    <string name="creer_compte_code_200">Pseudo déjà existant</string>
    <string name="creer_compte_code_1000">Problème de connexion à la DB</string>
    <string name="creer_compte_code_2000">Un problème autre est survenu</string>

    <!-- Code de retour pour le script "ajouter_score.php" -->
    <string name="ajout_score_code_0">Score ajouté</string>
    <string name="ajout_score_code_100">Problème de score (non transmis ou 0)</string>
    <string name="ajout_score_code_110">Problème de nom du jeu (non transmis ou vide)</string>
    <string name="ajout_score_code_120">Problème d\'id (non transmis ou 0)</string>
    <string name="ajout_score_code_1000">Problème de connexion à la DB</string>
    <string name="ajout_score_code_2000">Un problème autre est survenu</string>

    <!-- Code de retour pour le script "lister_jeux.php" -->
    <string name="list_jeux_code_0">Aucun problème</string>
    <string name="list_jeux_code_500">Aucun jeu trouvé (la table des scores est vide pour le moment)</string>
    <string name="list_jeux_code_1000">Problème de connexion à la DB</string>
    <string name="list_jeux_code_2000">Un problème autre est survenu</string>

    <!-- Code de retour pour le script "afficher_top.php" -->
    <string name="afficher_top_code_0">Aucun problème</string>
    <string name="afficher_top_code_100">Nom du jeu non transmis ou vide</string>
    <string name="afficher_top_code_500">Aucun joueur trouvé (la table des scores est vide pour le moment)</string>
    <string name="afficher_top_code_1000">Problème de connexion à la DB</string>
    <string name="afficher_top_code_2000">Un problème autre est survenu</string>

    <!-- Code de retour pour le script "lister_pseudos.php" -->
    <string name="list_pseudo_code_0">Aucun problème</string>
    <string name="list_pseudo_code_500">Aucun pseudo trouvé (la table des scores est vide pour le moment)</string>
    <string name="list_pseudo_code_1000">Problème de connexion à la DB</string>
    <string name="list_pseudo_code_2000">Un problème autre est survenu</string>
</resources>
