<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="bol.xavier.gestionscore.screen.ConnectionActivity">

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_login"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/but_logon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:text="@string/logon"/>

    <Button
        android:id="@+id/but_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/et_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/et_newLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/but_logon"
        android:inputType="text"
        android:hint="@string/newLogin"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_newLogin"
        android:inputType="textPassword"
        android:hint="@string/newPassword"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_newPassword"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/but_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_confirmPassword"
        android:text="@string/save"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/but_save"
        android:textColor="@color/colorRed"/>
</RelativeLayout>
