<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ajout_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bol.xavier.gestionscore.screen.AjoutScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_nameGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nameGame"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_wizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/btn_wizard"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/scoreObtenu"/>

    <Button
        android:id="@+id/btn_ajouterScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ajouterScore"/>

    <TextView
        android:id="@+id/tv_errorAjoutScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
