<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_afficher_top10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#b7b7b7">

        <TextView
            android:id="@+id/tv_pos"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_position"/>

        <View
            android:id="@+id/column_divider"
            style="@style/Divider_column" />

        <TextView
            android:id="@+id/tv_pseudo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_pseudo"/>

        <View
            style="@style/Divider_column" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_score"/>
    </LinearLayout>

    <View
        android:id="@+id/row_divider"
        style="@style/Divider_row" />
</LinearLayout>
